--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+        <title>Tic Tac Toe</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <script src="script.js"></script> 
+    </head>
+    <body>
+        <div class="board">
+            <div class="field">1</div>
+            <div class="field">2</div>
+            <div class="field">3</div>
+            <div class="field">4</div>
+            <div class="field">5</div>
+            <div class="field">6</div>
+            <div class="field">7</div>
+            <div class="field">8</div>
+            <div class="field">9</div>
+        </div>
+    </body>
 </html>
