--- a/RPS/index.html
+++ b/RPS/index.html
@@ -4,9 +4,16 @@
         <title>Roc-pappa-scissa</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="script.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css"> 
     </head>
     <body>
-        
+        <div class="main">
+            <p>Select any of the below ROCK-PAPER-SCISSOR</p>
+            <input type="button" id="rock" value="Rock"></input>
+            <input type="button" id="paper" value="Paper"></input>
+            <input type="button" id="scissor" value="Scissors"></input>
+        </div>
+        <div id="result"></div>
+        <script src="script.js"></script>
     </body>
 </html>
